--- a/src/assets/containers/Battle.module.css
+++ b/src/assets/containers/Battle.module.css
@@ -7,5 +7,13 @@
     background-color:#FFD600;
     border: 2px solid #FFD600;
     border-radius: 10px;
+    display:flex;
+    justify-content: center;
+    align-items: center;
   }
   
+
+  #swordImg{
+    height:70px;
+    width:70px;
+  }
