--- a/src/assets/containers/DailyTasks.module.css
+++ b/src/assets/containers/DailyTasks.module.css
@@ -1,14 +1,16 @@
 
+
+
 #daily_tasks_container{
     height: 94px;
     width:90%;
     background-color:white;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 10px 0px 0px 10px;
     display:flex;
-  
-  
   }
+
+  
   #daily_tasks{
     height:20vh;
     display: flex;
@@ -17,25 +19,63 @@
   }
   
 
-
   #daily_tasks_left{
 
-    width: 40%;
-    padding:10px;
+    width: 35%;
+    padding:5px 0px 0px 10px;
     display:flex;
-    justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     flex-direction: column;
+    font-family: monospace;
+    font-size: 1rem;
     
+    }
+
+    #tasks_number_color{
+      border:solid 1px;
+      border-radius: 20px;
+      height:10px;
+      width:10px;
+      padding-right: 10px;
+      margin-right: 5px;
+    }
+
+    #number_of_tasks{
+      padding: 20px 0px 0px 5px;
+      display:flex;
+      justify-content: space-around;
+      align-items: center;
     }
     
     #daily_tasks_middle{
-      background-color: red;
-      width: 20%;
+      width: 25%;
       display:flex;
       justify-content: center;
       align-items: center;
     }
+
+   #outerCircle{
+    height:80px;
+    width:80px;
+    border: 1px solid;
+    border-radius: 100%;
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    background-color: yellow;
+   }
+  #innerCircle{
+  height:70px;
+  width: 70px;
+  border: 1px solid;
+  border-radius: 100%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  font-family: monospace;
+  background-color: white;
+ }
     
     #daily_tasks_right{
       width: 40%;
@@ -56,6 +96,7 @@
       color:white;
       font-weight: bold;
       font-size: 30px;
+    
     }
     #view_tasks_btn{
       width:100px;
@@ -69,4 +110,6 @@
       color:white;
       font-weight: bold;
       font-size: 20px;
+      font-family: monospace;
+      margin-right: -10px;
     }  
