--- a/src/assets/containers/MainDashboard.module.css
+++ b/src/assets/containers/MainDashboard.module.css
@@ -27,7 +27,15 @@
   #xp_progress{
     background-color:#00FFC2 ;
     width: 80px;
+    
   }
+
+  #expImg{
+width:100%;
+height:100%;
+  }
+
+
   #dash_middle{
     width:20%;
     height:100%;
@@ -59,6 +67,17 @@
   justify-content: center;
   
   }
+
+#healthImg{
+    height: 34px;
+    width: 34px;
+  }
+  #coinImg{
+    height: 34px;
+    width: 34px;
+  }
+
+
   #health{
     height:25px;
     width: 120px;
