--- a/src/assets/containers/TopNav.module.css
+++ b/src/assets/containers/TopNav.module.css
@@ -9,6 +9,7 @@
       font-size: 20px;
       padding:5px;
       padding-top:20px;
+      font-family: monospace;
     }
     #user_container{
       width:50%;
