Some Changes to the Task Creation files

--- a/src/assets/Pages/DailyTasksPage.module.css
+++ b/src/assets/Pages/DailyTasksPage.module.css
@@ -252,3 +252,17 @@
 .TextFont{
     font-family: monospace;
 }
+
+
+.Display{
+    display: none;
+}
+
+.CreateMenu{
+    position:relative ;
+}
+
+#positionAbsolute{
+    position:absolute ;
+
+}
