--- a/src/assets/Pages/DailyTasksPage.module.css
+++ b/src/assets/Pages/DailyTasksPage.module.css
@@ -131,7 +131,9 @@
     width:100vw;
     background-color: rgb(56, 53, 53);
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+
 
 
 }
@@ -246,7 +248,7 @@
 .Difficulty{
     height:20px;
     width:20px;
-    background-color: green;
+ 
 }
 
 .TextFont{
@@ -271,4 +273,22 @@
 #positionAbsolute{
     position:absolute ;
 
+}
+
+.easy{
+    height:20px;
+    width:20px;
+    background-color: green;
+}
+
+.medium{
+    height:20px;
+    width:20px;
+    background-color: yellow;
+}
+
+.hard{
+    height:20px;
+    width:20px;
+    background-color: red;
 }
