--- a/src/assets/Pages/LogInPage.module.css
+++ b/src/assets/Pages/LogInPage.module.css
@@ -20,3 +20,11 @@
     margin-top: 5px;
     box-shadow: 0px 0px 0px 0px black;
 }
+
+#centered{
+height:100vh;
+width:100vw;
+ display:flex;
+ justify-content: center;
+ align-items: center;
+}
