some minor changes

--- a/src/assets/Pages/AchievementsPage.module.css
+++ b/src/assets/Pages/AchievementsPage.module.css
@@ -1,86 +1,32 @@
 #topNav{
-    width:100vw;
-    height:5vh;
-    display: flex;
-    justify-content: left;
-    align-items: center;
-    padding-left: 20px;
-
-
-}
-
-#userContainer{
-    height:35vh;
-    width:100vw;
-    background-color: greenyellow;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    margin-bottom: 20px;
-}
-
-#UserImage{
-    height: 160px;
-    aspect-ratio: 1 / 1;
-    border: solid 3px greenyellow;
-    box-shadow: 0 0 0 6px green;
-    margin-bottom: 10px;
-}
-
-#aboutInfoContainer{
     height:10vh;
     width:100vw;
     display:flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
-    margin-bottom: 20px;
 }
 
-#aboutInfo{
-    height:100%;
-    width:95%;
-    background-color: grey;
-    border-radius: 10px;
- 
+#achievementsIcon{
+    height:80px;
+    width:80px;
+    margin-left: 20%;
+    margin-right: 10px;
 }
-#statsContainer{
 
+#AchievementsContainer{
+    height:90vh;
     width:100vw;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    margin-bottom: 20px;
-}
-
-#stats{
-    background-color: white;
-    width:95%;
-    height:100%
-
-}
-
-#btnContainer{
-    display: flex;
+    background-color: darkcyan;
+     display: flex;
     justify-content: space-around;
-    align-items: center;
-
-
-
+    flex-wrap: wrap;
+    
 }
 
-#AchievementsBtn{
-    background-color: grey;
-}
-
-#FeedbackBtn{
-    background-color: black;
-}
-
-.btn{
-    color:white;
-    border: none;
-    border-radius: 10px;
-    height:40px;
-    width:120px
+.achievement{
+    height:80px;
+    width:80px;
+    background-color: bisque;
+    border-radius: 50%;
+    margin:10px
 }
